2021-03-08

        * Version 2.0.0 released
        ========================

        Add missing members to GOptimizerLM::copy_members() method
        Store DRB, DRG and DRX as GCOMDri in GCOMObservation (#3560)
        Implement COMPTEL response for diffuse models (#3558)
        Implement COMPTEL background model computation (#3557)
        Fix reading of scaled FITS columns, remove GFitsTableCol::scale() method (#3553)
        Add gammalib::compare() function (#3552)
        Add DRI constructor to GCOMObservation class
        Add member access methods to GCOMDri class
        Implement ToF correction for COMPTEL EVP version 2 datasets (#3549)
        Implement ToF correction in IRF computation (#3548)
        Correct COMPTEL average deadtime to 0.965 (#3547)
        Add methods to GCOMObservation class to access DRI filenames
        Add GModelSpectralFunc methods to build file function in memory (#3535)
        Add GCTABackground2D class (#3527)
        Implement vectorised response computation for COMPTEL (#3501)
        Fix response cache removal for vector cache (#3499)
        Add GModelAssociation and GModelAssociations classes (#3469)
        Add GSkyMap::correlate() method (#3461)
        Add GModels::eval() vector evaluation method (#3455)
        Fix GSkyMap::stack_maps() method for WCS maps
        Add GCTAModelSkyCube class (#3442)
        Add GSkyModel flux() and eflux() methods (#3439)
        Add XML value constructors and access methods to GXmlElement class (#3431)
        Correct application elapsed CPU time for OpenMP (#3417) 
        Implement sparse vector response cache (#3403)
        Implement GMatrixSparse::row() and GMatrixSparse::add_to_row() methods
        Integrate analytical gradients for energy dispersion computation (#3333)
        Add GFunctions abstract base class (#3328)
        Add GIntegrals class (#3328)
        Remove implicit conversion warnings (#3324)
        Add gammalib::tmpnam() function (#3324)