@@ -1,8 +1,9 @@
-2021-03-08
+2021-03-11
 
         * Version 2.0.0 released
         ========================
 
+        Fix incompatibility in GMatrixSparse::mix_column_prepare() method (#3563)
         Add missing members to GOptimizerLM::copy_members() method
         Store DRB, DRG and DRX as GCOMDri in GCOMObservation (#3560)
         Implement COMPTEL response for diffuse models (#3558)
